--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
